
option java_package = "protobufdsl.proto";

message MessageT1{
	
	optional int64 field1 = 1;
	optional int32 field2 = 2;
	optional double field3 = 3;
	optional float field4 = 4;
	optional uint32 field5 = 5;
	optional uint64 field6 = 6;
	optional sint32 field7 = 7;
	optional sint64 field8 = 8;
	optional string field9 = 9;
	optional bytes field10 =10;
}

